added front vote and improved style RatingCircleComponent.vue

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Puddles&display=swap');
 
 // Variables
 @import 'variables';
