imp HomePage horiz scroll

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,8 +5,13 @@
 // Variables
 @import 'variables';
 
+// Useful
+@import "useful";
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
 // Font Awesome
 @import "~@fortawesome/fontawesome-free/css/all.css";
+
+
