fix history pos abs span & point events none

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,6 @@
-@import url(https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap);/*!
+@import url(https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap);@import url(https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;
+
+400;700&family=Ysabeau+SC:wght@200&display=swap);/*!
  * Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  * Copyright 2023 Fonticons, Inc.
@@ -7785,7 +7787,6 @@ readers do not read off random characters that represent icons */
   src: url(/fonts/vendor/@fortawesome/fontawesome-free/webfa-v4compatibility.woff2?4bc58bc16bb05a05d3a47a4f7e143b75) format("woff2"), url(/fonts/vendor/@fortawesome/fontawesome-free/webfa-v4compatibility.ttf?d20cedd7e254d4b58b721b6995ca52b4) format("truetype");
   unicode-range: U+F041,U+F047,U+F065-F066,U+F07D-F07E,U+F080,U+F08B,U+F08E,U+F090,U+F09A,U+F0AC,U+F0AE,U+F0B2,U+F0D0,U+F0D6,U+F0E4,U+F0EC,U+F10A-F10B,U+F123,U+F13E,U+F148-F149,U+F14C,U+F156,U+F15E,U+F160-F161,U+F163,U+F175-F178,U+F195,U+F1F8,U+F219,U+F27A; }
 @charset "UTF-8";
-
 .text-cloud {
   font-family: "Rubik Puddles", cursive;
 }
