imp all style of project

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,6 @@
 
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;400;700&family=Ysabeau+SC:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 // Variables
 @import 'variables';
